# Boe_bot_robot

boe_bot/: CMakeLists.txt  package.xml
boe_bot/launch/: display.launch  gazebo.launch
boe_bot/urdf/: boe_bot.urdf
boe_bot_navigation/: CMakeLists.txt  package.xml
boe_bot_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
boe_bot_navigation/launch/: amcl.launch  move_base.launch  navigation.launch
boe_bot_navigation/maps/: hector_turtlebot3_world.yaml  karto_turtlebot3_world.yaml  turtle_map_house.yaml
boe_bot_navigation/rviz/: navigation.rviz
boe_bot_navigation/worlds/: new_room.world
boe_bot_slam/: CMakeLists.txt  package.xml
boe_bot_slam/launch/: boe_bot_hector_slam.launch  boe_bot_karto_slam.launch  new_room.launch
boe_bot_slam/rviz/: hector_slam.rviz  karto_slam.rviz
